Visual Studio 2017 test 1

--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -1,44 +1,41 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="OverParse.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="OverParse.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
     </startup>
     <userSettings>
         <OverParse.Properties.Settings>
             <setting name="Path" serializeAs="String">
-                <value>Z:\CLEARLY\IMPOSSIBLE\BROKEN\PATH</value>
+                <value>C:\Program Files (x86)\SEGA\PHANTASYSTARONLINE2\pso2_bin</value>
             </setting>
-            <setting name="Top" serializeAs="String">
-                <value>50</value>
+            <setting name="LaunchMethod" serializeAs="String">
+                <value>Unknown</value>
+            </setting>
+            <setting name="InstalledPluginVersion" serializeAs="String">
+                <value>4</value>
+            </setting>
+            <setting name="EncounterTimeout" serializeAs="String">
+                <value>60</value>
             </setting>
             <setting name="Left" serializeAs="String">
                 <value>50</value>
             </setting>
-            <setting name="Height" serializeAs="String">
-                <value>300</value>
-            </setting>
             <setting name="Width" serializeAs="String">
-                <value>600</value>
+                <value>620</value>
             </setting>
-            <setting name="Maximized" serializeAs="String">
-                <value>False</value>
+            <setting name="WindowOpacity" serializeAs="String">
+                <value>1</value>
             </setting>
-            <setting name="AutoEndEncounters" serializeAs="String">
-                <value>False</value>
+            <setting name="Height" serializeAs="String">
+                <value>275</value>
             </setting>
-            <setting name="EncounterTimeout" serializeAs="String">
-                <value>30</value>
-            </setting>
-            <setting name="SeparateZanverse" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ClickthroughEnabled" serializeAs="String">
-                <value>False</value>
+            <setting name="Top" serializeAs="String">
+                <value>50</value>
             </setting>
             <setting name="LogToClipboard" serializeAs="String">
                 <value>False</value>
@@ -46,25 +43,19 @@
             <setting name="FirstRun" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="AlwaysOnTop" serializeAs="String">
+            <setting name="BanWarning" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="UpgradeRequired" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="CompactMode" serializeAs="String">
+            <setting name="SeparateZanverse" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="WindowOpacity" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="ShowRawDPS" serializeAs="String">
+            <setting name="ClickthroughEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="ShowDamageGraph" serializeAs="String">
+            <setting name="NeedsPluginUpdate" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SeparateAuxDamage" serializeAs="String">
+            <setting name="ResetInvoked" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="AutoHideWindow" serializeAs="String">
@@ -73,32 +64,65 @@
             <setting name="AutoHideWindowWarning" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="ResetInvoked" serializeAs="String">
+            <setting name="AutoEndEncounters" serializeAs="String">
                 <value>False</value>
-            </setting>
-            <setting name="InstalledPluginVersion" serializeAs="String">
-                <value>-1</value>
-            </setting>
-            <setting name="LaunchMethod" serializeAs="String">
-                <value>Unknown</value>
-            </setting>
-            <setting name="AnonymizeNames" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="NeedsPluginUpdate" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ListOpacity" serializeAs="String">
-                <value>0.75</value>
             </setting>
             <setting name="HighlightYourDamage" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AlwaysOnTop" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Maximized" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="SeparateAIS" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="BanWarning" serializeAs="String">
+            <setting name="UpgradeRequired" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="AnonymizeNames" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparateAuxDamage" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CompactMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowDamageGraph" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListOpacity" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="Criticalcfg" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="JAcfg" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparatePunisher" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparateDB" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparateRide" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparateFinish" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="LowResources" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CPUdraw" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Clock" serializeAs="String">
+                <value>False</value>
             </setting>
         </OverParse.Properties.Settings>
     </userSettings>
