Add Separate Mag, PB

--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -124,6 +124,18 @@
             <setting name="Clock" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SeparateMag" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparatePB" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DPSformat" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Nodecimal" serializeAs="String">
+                <value>False</value>
+            </setting>
         </OverParse.Properties.Settings>
     </userSettings>
 </configuration>
