--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -136,6 +136,9 @@
             <setting name="Nodecimal" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Onlyme" serializeAs="String">
+                <value>False</value>
+            </setting>
         </OverParse.Properties.Settings>
     </userSettings>
 </configuration>
