--- a/OverParse/Properties/Settings.settings
+++ b/OverParse/Properties/Settings.settings
@@ -128,5 +128,8 @@
     <Setting Name="Nodecimal" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Onlyme" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
