--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -124,12 +124,6 @@
             <setting name="Clock" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SeparateMag" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="SeparatePB" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="DPSformat" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -137,6 +131,18 @@
                 <value>False</value>
             </setting>
             <setting name="Onlyme" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="NomyName" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SeparateLsw" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="End3" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideLsw" serializeAs="String">
                 <value>False</value>
             </setting>
         </OverParse.Properties.Settings>
