Replace with better hotkey manager, readded hotkey for [Always on Top], fixed missing settings not saved

--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -142,9 +142,23 @@
             <setting name="End3" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="HidePlayers" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideAIS" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="HideLsw" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="HidePwp" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideDB" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideRide" serializeAs="String">
+                <value>False</value>
         </OverParse.Properties.Settings>
     </userSettings>
 </configuration>
