Fixed missing tag (mistake)

--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -159,6 +159,7 @@
             </setting>
             <setting name="HideRide" serializeAs="String">
                 <value>False</value>
+            </setting>
         </OverParse.Properties.Settings>
     </userSettings>
 </configuration>
