--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -26,7 +26,7 @@
                 <value>50</value>
             </setting>
             <setting name="Width" serializeAs="String">
-                <value>620</value>
+                <value>670</value>
             </setting>
             <setting name="WindowOpacity" serializeAs="String">
                 <value>1</value>
@@ -97,12 +97,6 @@
             <setting name="ListOpacity" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="Criticalcfg" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="JAcfg" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="SeparatePwp" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -139,9 +133,6 @@
             <setting name="SeparateLsw" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="End3" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="HideLsw" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -159,6 +150,39 @@
             </setting>
             <setting name="HideRide" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="ListName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListPct" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListDmg" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListDmgd" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListDPS" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListJA" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListCri" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListHit" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ListAtk" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Variable" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Updateinv" serializeAs="String">
+                <value>250</value>
             </setting>
         </OverParse.Properties.Settings>
     </userSettings>
