--- a/OverParse/OverParse.csproj
+++ b/OverParse/OverParse.csproj
@@ -79,6 +79,12 @@
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NHotkey, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHotkey.1.2.1\lib\net20\NHotkey.dll</HintPath>
+    </Reference>
+    <Reference Include="NHotkey.Wpf, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHotkey.Wpf.1.2.1\lib\net35\NHotkey.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationFramework" />
     <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
@@ -105,24 +111,16 @@
     <Compile Include="Detalis.xaml.cs">
       <DependentUpon>Detalis.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FontDialogEx.xaml.cs">
-      <DependentUpon>FontDialogEx.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Hotkey.cs" />
     <Compile Include="inputbox.xaml.cs">
       <DependentUpon>inputbox.xaml</DependentUpon>
     </Compile>
-    <Compile Include="QuestName.xaml.cs">
-      <DependentUpon>QuestName.xaml</DependentUpon>
+    <Compile Include="SelectColumn.xaml.cs">
+      <DependentUpon>SelectColumn.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowsServices.cs" />
     <Page Include="Detalis.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="FontDialogEx.xaml">
-      <SubType>Designer</SubType>
-      <Generator>XamlIntelliSenseFileGenerator</Generator>
     </Page>
     <Page Include="inputbox.xaml">
       <SubType>Designer</SubType>
@@ -142,9 +140,9 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="QuestName.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="SelectColumn.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +163,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
