--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -184,6 +184,9 @@
             <setting name="Updateinv" serializeAs="String">
                 <value>1000</value>
             </setting>
+            <setting name="QuestTime" serializeAs="String">
+                <value>False</value>
+            </setting>
         </OverParse.Properties.Settings>
     </userSettings>
 </configuration>
