--- a/OverParse/packages.config
+++ b/OverParse/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="3.1.0" targetFramework="net471" />
+  <package id="Fody" version="3.2.1" targetFramework="net471" developmentDependency="true" />
+  <package id="FontAwesome.Sharp" version="5.2.0" targetFramework="net471" />
   <package id="NHotkey" version="1.2.1" targetFramework="net471" />
   <package id="NHotkey.Wpf" version="1.2.1" targetFramework="net471" />
 </packages>
